--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*/Library
-*/Logs
-*/Packages
-*/Temp
-*/UserSettings
-*/.vsconfig
+Videogame*Design*and*Programming/*/Library
+Videogame*Design*and*Programming/*/Logs
+Videogame*Design*and*Programming/*/Packages
+Videogame*Design*and*Programming/*/Temp
+Videogame*Design*and*Programming/*/UserSettings
+Videogame*Design*and*Programming/*/.vsconfig
