--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ Videogame*Design*and*Programming/*/Packages
 Videogame*Design*and*Programming/*/Temp
 Videogame*Design*and*Programming/*/UserSettings
 Videogame*Design*and*Programming/*/.vsconfig
+
+Videogame*Design*and*Programming/*/*/Library
+Videogame*Design*and*Programming/*/*/Logs
+Videogame*Design*and*Programming/*/*/Packages
+Videogame*Design*and*Programming/*/*/Temp
+Videogame*Design*and*Programming/*/*/UserSettings
+Videogame*Design*and*Programming/*/*/.vsconfig
